--- a/index.html
+++ b/index.html
@@ -39,14 +39,18 @@
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
     </script>
+
     <script src="assets/lib/angular/angular.min.js"></script>
     <script src="assets/lib/angular/angular-route.min.js"></script>
     <script src="assets/lib/angular/angular-resource.min.js"></script>
     <script src="assets/lib/angular/angular-sanitize.min.js"></script>
     <script src="assets/lib/angular/angular-messages.min.js"></script>
     <script src="assets/lib/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
+    <script src="assets/lib/fire/firebase.js"></script>
+    <script src="assets/lib/fire/angularfire.min.js"></script>
     <script src="assets/script/controller/perfController.js"></script>
     <script src="assets/script/directive/performanceDirective.js"></script>
+    <script src="assets/script/service/performanceService.js"></script>
     <script src="assets/script/app.js"></script>
 </body>
 </html>
