--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Performance management</title>
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body ng-controller="MainController">
     <ng-include src="'assets/template/page/headerTemplate.html'">
@@ -31,7 +32,7 @@
                        date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
             </div>
             <div class="form-group">
-                <textarea ng-model="goalDescription" class="form-control" placeholder="Enter description"></textarea>
+                <textarea ng-model="goalDescription" rows="15" cols="50" class="form-control" placeholder="Enter description"></textarea>
             </div>
         </div>
         <div class="modal-footer">
