--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Performance management</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
-<body ng-controller="MainController">
+<body ng-controller="MainController" ng-cloak="">
     <ng-include src="'assets/template/page/headerTemplate.html'">
     </ng-include>
     <div ng-view=""></div>
 
     <script type="text/ng-template" id="goalModalContent.html">
+        <form ng-submit="ok($event)">
         <div class="modal-header">
             <h3 class="modal-title">Create New Goal</h3>
         </div>
         <div class="modal-body">
             <div class="form-group">
-                <input type="text" ng-model="goalName" class="form-control" placeholder="Enter your goal">
+                <input type="text" ng-model="goalTitle" class="form-control" placeholder="Enter your goal">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" datepicker-popup="yyyy/MM/dd" ng-model="goalStartTime"
                        placeholder="Enter start time"
                        is-open="sopened"  datepicker-options="dateOptions" ng-click="openStartTime($event)"
-                       date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                       date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"  />
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" datepicker-popup="yyyy/MM/dd" ng-model="goalEndTime"
@@ -36,9 +38,10 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="ok()">OK</button>
-            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+            <button class="btn btn-primary" type="submit">OK</button>
+            <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
         </div>
+     </form>
     </script>
 
     <script src="assets/lib/angular/angular.min.js"></script>
